--- a/pushups/1_epidemiology.ipynb
+++ b/pushups/1_epidemiology.ipynb
@@ -6,6 +6,9 @@
    "source": [
     "---\n",
     "title: Epidemiology Models\n",
+    "format:\n",
+    "    html: default\n",
+    "    ipynb: default\n",
     "---"
    ]
   },
