--- a/homework/2024/Coursework_mie37_2024.ipynb
+++ b/homework/2024/Coursework_mie37_2024.ipynb
@@ -35,11 +35,14 @@
     "\n",
     "We seek to solve numerically the following consumption-saving problem using the time-iteration algorithm.\n",
     "\n",
+    "\n",
     "Income is an iid process $\\epsilon_t$ with $\\epsilon_t \\sim \\mathcal{N}(\\sigma)$ ($\\sigma$ is standard deviation). Interest rate is $r\\in [1,\\frac{1}{\\beta}[$ where $\\beta\\in]0,1[$ is the discount factor.\n",
+    "\n",
     "\n",
     "Available income is $w_t$ and follows the law of motion:\n",
     "\n",
     "$$w_{t+1} = e^ {\\epsilon_{t+1}} +  (w_{t} - c_{t}) r$$\n",
+    "\n",
     "\n",
     "where $c_t \\in ]0,w_t]$ is consumption chosen at date $t$, with an implicit no borrowing constraint.\n"
    ]
@@ -110,9 +113,11 @@
     "\n",
     "The solution of the model is a decision rule $c(w)$.\n",
     "\n",
-    "We will approximate it by a function defined on $[0,w_{max}[$, by the values it takes on $N$ linearly spaced grid points.\n",
+    "In what follows, we will approximate it by a function defined over $[0,w_{max}[$ by the values it takes on $N$ linearly spaced grid points.\n",
     "\n",
-    "In our solutions algorithm, we will use the initial guess $\\varphi_0(w) = min(w, p_0+p_1(w-p_0))$."
+    "\n",
+    "In our solutions algorithm, we will use the initial guess $\\varphi_0(w) = min(w, p_0+p_1(w-p_0))$.\n",
+    "\n"
    ]
   },
   {
@@ -157,7 +162,7 @@
    "id": "fce49e69",
    "metadata": {},
    "source": [
-    "__Compute the values `x::{Float64}`of `φ_0()` on the grid `points`__"
+    "__Compute the values `c_0::{Float64}`of `φ_0()` on the grid `points`__"
    ]
   },
   {
@@ -173,7 +178,7 @@
    "id": "34ad469f",
    "metadata": {},
    "source": [
-    "__Use the `Interpolations.jl` library to define a function `φ(w::Float64)` defined for any `w` using piecewise *linear* interpolation.__"
+    "__Use the `Interpolations.jl` library to define a function `φ(w::Float64)` defined for any `w` using piecewise *linear* interpolation in such a way that it takes values `c_0` on the grid `points`.__"
    ]
   },
   {
@@ -193,7 +198,7 @@
     "\n",
     "- the function `φ_0()`\n",
     "- the interpolated function $φ$\n",
-    "- its values `c0` on the grid points"
+    "- its values `c_0` on the grid points"
    ]
   },
   {
@@ -234,7 +239,7 @@
    "metadata": {},
    "source": [
     "__Represent the shock $\\epsilon$ by two vectors $(e_1, ... e_q)$ and $(l_1, ..., l_q)$ with $q=10$ \n",
-    "such that we can approximate $E_{\\epsilon} (g(\\epsilon))$ by $\\sum_{i=1}^q l_i e_i$ (for suitable $g$).__\n",
+    "such that for a suitable function $g$ we can approximate $E_{\\epsilon} (g(\\epsilon))$ by $\\sum_{i=1}^q l_i e_i$ .__\n",
     "\n",
     "(choose the method you want)"
    ]
@@ -330,9 +335,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "231d093a",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4005d572",
    "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
@@ -347,7 +354,9 @@
    "cell_type": "markdown",
    "id": "7b0596e2",
    "metadata": {},
-   "source": []
+   "source": [
+    "\\"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -356,23 +365,23 @@
    "source": [
     "## Time Iteration\n",
     "\n",
-    "__(prep): Assuming the initial guess $c_0()$ is the decision rule followed tomorrow, determine, for each grid point, the  optimal consumption choice made today. This can be achieved by feeding the appropriate function into the right nonlinear root-finder.__"
+    "__(prep): Assuming the initial guess $φ_0()$ is the decision rule followed tomorrow, determine, for a given value `w` in the state-space, the  optimal consumption choice made today. This can be achieved by feeding the appropriate function into the right nonlinear root-finder.__"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "504cfb1f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "__(prep): Find the vector of all the optimal consumption choices on the grid today, given the decision rule tomorrow.__"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "64c08784",
    "metadata": {},
    "source": [
-    "__Plot the optization residuals (i.e.  values of $\\Phi_t$) for the initial guess function__"
+    "__Plot the optimization residuals (i.e.  values of $\\Phi_t$) for the initial guess function__"
    ]
   },
   {
@@ -401,27 +410,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "86dbbbeb",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "Base.Meta.ParseError",
-     "evalue": "ParseError:\n# Error @ /home/pablo/Teaching/ensae/mie37/homework/2024/Coursework_mie37_2024.ipynb:12:51\n\"\"\"\nfunction time_iteration(φ0, model, approx; K=200, ... )\n#                                                 └─┘ ── invalid identifier",
-     "output_type": "error",
-     "traceback": [
-      "ParseError:\n",
-      "# Error @ /home/pablo/Teaching/ensae/mie37/homework/2024/Coursework_mie37_2024.ipynb:12:51\n",
-      "\"\"\"\n",
-      "function time_iteration(φ0, model, approx; K=200, ... )\n",
-      "#                                                 └─┘ ── invalid identifier\n",
-      "\n",
-      "Stacktrace:\n",
-      " [1] top-level scope\n",
-      "   @ ~/Teaching/ensae/mie37/homework/2024/Coursework_mie37_2024.ipynb:12"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# here is a placeholder implementation to help you structure your program.\n",
     "#  feel free to modify or discard\n",
@@ -469,7 +461,7 @@
    "id": "e81ac862",
    "metadata": {},
    "source": [
-    "__Check that the value returned by `time_iteration is actually a solution to the system. How fast is the convergence? Graphical representation.__"
+    "__Check that the value returned by `time_iteration` is actually a solution to the system. How fast is the convergence? Graphical representation.__"
    ]
   },
   {
